--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,9 @@ needed. -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="vendors/jquery.js" charset="utf-8"></script>
-    <script src="scripts/script.js" charset="utf-8"></script>
+    <script src="scripts/client.js" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
