--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,8 +8,33 @@ needed. -->
     <link rel="stylesheet" href="css/style.css">
     <script src="vendors/jquery.js" charset="utf-8"></script>
     <script src="scripts/script.js" charset="utf-8"></script>
-    <title></title>
+    <title>Number Guessing Game</title>
   </head>
   <body>
+    <h1>Number Guessing Game</h1>
+
+    <div class="playerOne">
+      <p>Player 1<p>
+      <input type="text" class='guessInput' placeholder="Player 1 Guess">
+    </div>
+
+    <div class="playerTwo">
+      <p>Player 2<p>
+      <input type="text" class='guessInput' placeholder="Player 2 Guess">
+    </div>
+
+    <div class="playerThree">
+      <p>Player 3<p>
+      <input type="text" class='guessInput' placeholder="Player 3 Guess">
+    </div>
+
+    <div class="playerFour">
+      <p>Player 4<p>
+      <input type="text" class='guessInput' placeholder="Player 4 Guess">
+    </div>
+
+    </br>
+    <button id="submitGuessBtn">Submit Guesses</button>
+
   </body>
 </html>
