Appendingto the DOM is test functional

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- change sources to approriate files and folders in server/public as
-needed. -->
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,6 +8,6 @@ needed. -->
     <script src="scripts/client.js" charset="utf-8"></script>
     <title></title>
   </head>
-  <body>
+  <body id="gameUI">
   </body>
 </html>
