--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,19 +12,19 @@
     <h1>Number Guessing Game</h1>
     <div class="playerOne">
       <p>Player 1<p>
-      <input type="text" class='guessInput' placeholder="Player 1 Guess">
+      <input type="text" id='playerOneInput' placeholder="Player 1 Guess">
     </div>
     <div class="playerTwo">
       <p>Player 2<p>
-      <input type="text" class='guessInput' placeholder="Player 2 Guess">
+      <input type="text" id="playerTwoInput" placeholder="Player 2 Guess">
     </div>
     <div class="playerThree">
       <p>Player 3<p>
-      <input type="text" class='guessInput' placeholder="Player 3 Guess">
+      <input type="text" id="playerThreeInput" placeholder="Player 3 Guess">
     </div>
     <div class="playerFour">
       <p>Player 4<p>
-      <input type="text" class='guessInput' placeholder="Player 4 Guess">
+      <input type="text" id="playerFourInput" placeholder="Player 4 Guess">
     </div>
     </br>
     <button id="submitGuessBtn">Submit Guesses</button>
