--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,19 +11,19 @@
   <body id="gameUI">
     <h1>Number Guessing Game</h1>
     <div class="playerOne">
-      <p>Player 1<p>
+      <h3>Player 1<h3>
       <input type="text" id='playerOneInput' placeholder="Player 1 Guess">
     </div>
     <div class="playerTwo">
-      <p>Player 2<p>
+      <h3>Player 2<h3>
       <input type="text" id="playerTwoInput" placeholder="Player 2 Guess">
     </div>
     <div class="playerThree">
-      <p>Player 3<p>
+      <h3>Player 3<h3>
       <input type="text" id="playerThreeInput" placeholder="Player 3 Guess">
     </div>
     <div class="playerFour">
-      <p>Player 4<p>
+      <h3>Player 4<h3>
       <input type="text" id="playerFourInput" placeholder="Player 4 Guess">
     </div>
     </br>
