--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,6 +28,6 @@
     </div>
     </br>
     <button id="submitGuessBtn">Submit Guesses</button>
-    <button id="cancelBtn">Cancel Guesses</button>
+    <button id="cancelBtn">Cancel Game</button>
   </body>
 </html>
